--- a/src/bridge_px4/MPC/CMakeLists.txt
+++ b/src/bridge_px4/MPC/CMakeLists.txt
@@ -10,19 +10,34 @@ set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")
 set(CMAKE_C_STANDARD_LIBRARIES "${CMAKE_C_STANDARD_LIBRARIES} -lm")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)  # -fPIC
 
-include_directories (include OSQP_code/include)
+list (APPEND
+      cpg_include
+      ${CMAKE_CURRENT_SOURCE_DIR}/include
+      ${CMAKE_CURRENT_SOURCE_DIR}/solver_code/include
+)
 
-add_subdirectory (OSQP_code)
+include_directories (${cpg_include})
+
+add_subdirectory (solver_code)
+
+list (APPEND
+      cpg_head
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/cpg_workspace.h
+      ${CMAKE_CURRENT_SOURCE_DIR}/include/cpg_solve.h
+      ${solver_head}
+)
 
 list (APPEND
       cpg_src
       ${CMAKE_CURRENT_SOURCE_DIR}/src/cpg_workspace.c
       ${CMAKE_CURRENT_SOURCE_DIR}/src/cpg_solve.c
-      ${osqp_src}
+      ${solver_src}
 )
 
-add_executable (cpg_example src/cpg_example.c ${cpg_src})
+add_executable (cpg_example ${cpg_head} ${cpg_src} ${CMAKE_CURRENT_SOURCE_DIR}/src/cpg_example.c)
 
-add_library(cpg STATIC ${cpg_src})
+add_library(cpg STATIC ${cpg_head} ${cpg_src})
 
+set(cpg_include "${cpg_include}" PARENT_SCOPE)
+set(cpg_head "${cpg_head}" PARENT_SCOPE)
 set(cpg_src "${cpg_src}" PARENT_SCOPE)
