--- a/src/bridge_px4/MPC/solver_code/CMakeLists.txt
+++ b/src/bridge_px4/MPC/solver_code/CMakeLists.txt
@@ -142,4 +142,5 @@ add_library (emosqpstatic STATIC ${osqp_src} ${osqp_headers})
 add_executable (example ${PROJECT_SOURCE_DIR}/src/example.c)
 target_link_libraries (example emosqpstatic)
 
-set(osqp_src "${osqp_src}" PARENT_SCOPE)
+set(solver_head "${osqp_headers}" PARENT_SCOPE)
+set(solver_src "${osqp_src}" PARENT_SCOPE)
