X forward and NED
Added node for position tracking and modification to have the vehicle have the x-axis towards the front in the body coordinate system and follow the NED convention for the world coordinate frame of reference.

--- a/src/bridge_iroad/CMakeLists.txt
+++ b/src/bridge_iroad/CMakeLists.txt
@@ -172,6 +172,9 @@ target_link_libraries(iroad_closedloop ${catkin_LIBRARIES})
 add_executable(iroad_teleop_can src/iroad_teleop_can.cpp)
 target_link_libraries(iroad_teleop_can ${catkin_LIBRARIES})
 
+add_executable(iroad_pos_tracker src/iroad_pos_tracker.cpp)
+target_link_libraries(iroad_pos_tracker ${catkin_LIBRARIES})
+
 #############
 ## Install ##
 #############
